manifests/goapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: goapp-service
spec:
  selector:
    app: goapp
  ports:
    #    - protocol: TCP
    - port: 8000
      targetPort: 8000
