manifests/goapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goapp
  template:
    metadata:
      labels:
        app: goapp
    spec:
      containers:
        - name: goapp
          image: ryohz/seccamp2023b3-goapplication
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: goapp-service
  labels:
    app: goapp
spec:
  selector:
    app: go-app
  ports:
    - protocol: TCP
      # exposed port
      port: 80
      # container port
      targetPort: 8080
