manifests/ingress.yml
# apiVersion: networking.k8s.io/v1
apiVersion: projectcontour.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
    - host: foo.bar.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: goapp-service
              port:
                number: 80
